# fff.nvim

./: .gitignore  Cargo.toml  Makefile  README.md  _typos.toml
.github/workflows/: release.yaml
crates/fff-c/: Cargo.toml
crates/fff-c/src/: ffi_types.rs  lib.rs
crates/fff-core/: Cargo.toml
crates/fff-core/src/: background_watcher.rs  bigram_filter.rs  bigram_query.rs  constraints.rs  error.rs  file_picker.rs  frecency.rs  grep.rs  lib.rs  log.rs  query_tracker.rs  score.rs  shared.rs  sort_buffer.rs  types.rs
crates/fff-core/tests/: bigram_overlay_coherence_test.rs  bigram_overlay_integration.rs  fuzz_file_operations.rs  grep_integration.rs
crates/fff-grep/: Cargo.toml
crates/fff-mcp/: Cargo.toml
crates/fff-mcp/src/: main.rs  output.rs  server.rs
crates/fff-nvim/: Cargo.toml
crates/fff-nvim/benches/: indexing_and_search.rs
crates/fff-nvim/src/: lib.rs  lua_types.rs
crates/fff-python/: Cargo.toml
crates/fff-query-parser/: Cargo.toml
crates/fff-query-parser/src/: parser.rs
doc/: fff.nvim.txt
lua/fff/: conf.lua  file_renderer.lua  fuzzy.lua  picker_ui.lua
lua/fff/file_picker/: preview.lua
lua/fff/grep/: grep_renderer.lua  init.lua
lua/fff/picker_ui/: ui_creator.lua
